2005-08-04 Alain Magloire
	Fix taken from 3.0 PR 104907
	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCache.java
	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCacheJob.java

2005-08-04 Alain Magloire
	Part fix for PR 100992: The signature was incorrect for structure/unions.
	* model/org/eclipse/cdt/internal/core/model/CModelBuilder.java

2005-03-02 Alain Magloire
	Fix PR 84527: PathEntryManager marker jobs were start to often.
	Scalabilite issue.
	* model/org/eclipse/cdt/internla/core/model/PathEntrymanager.java

2005-03-02 Alain Magloire
	Fix for PR 85043: NPE when calling Ar.isARHeader(null);
	* utils/org/eclipse/cdt/utils/elf/AR.java
	* utils/org/eclipse/cdt/utils/macho/AR.java
	* utils/org/elcipse/cdt/utils/som/AR.java
	* utils/org/eclipse/cdt/utils/xcoff/AR.java

2005-02-16 Alain Magloire
	Fix for PR 85625, The IBinary info were not remove in the cache.
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java

2005-01-19 Alain Magloire
	PR 83224
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java

2005-01-19 Alain Magloire
	PR 83151
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java

2005-01-18 David Inglis
	Fixed bug #82705
	
	* src/org/eclipse/cdt/internal/core/CDescriptor.java
	
2005-01-11 David Inglis

	Fixed NPE bug #82572
	
	* src/org/eclipse/cdt/internal/core/CDescriptor.java
	
2004-12-09 Alain Magloire
	Fix for 80724: not showing initialized global variables.
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java

2004-12-10 David Inglis
	Fixed bug #80713
	
	* utils/org/eclipse/cdt/utils/BinaryObjectAdapter.java
	* utils/org/eclipse/cdt/utils/coff/PE.java
	* utils/org/eclipse/cdt/utils/coff/parser/PEBinaryObject.java
	* utils/org/eclipse/cdt/utils/elf/parser/ElfBinaryObject.java
	* utils/org/eclipse/cdt/utils/macho/parser/MachOBinaryObject.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMBinaryObject.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/XCOFFBinaryParser.java	
